--- a/Chatbot.ipynb
+++ b/Chatbot.ipynb
@@ -622,6 +622,7 @@
    "source": [
     "def split_text(data_for_splitting):\n",
     "    text_splitter = RecursiveCharacterTextSplitter(chunk_size=800, chunk_overlap=200)\n",
+    "    # Text chunks
     "    text_chunks = text_splitter.split_documents(data_for_splitting)\n",
     "    return text_chunks"
    ]
