Correct the line

--- a/Chatbot.ipynb
+++ b/Chatbot.ipynb
@@ -622,7 +622,6 @@
    "source": [
     "def split_text(data_for_splitting):\n",
     "    text_splitter = RecursiveCharacterTextSplitter(chunk_size=800, chunk_overlap=200)\n",
-    "    # Text chunks
     "    text_chunks = text_splitter.split_documents(data_for_splitting)\n",
     "    return text_chunks"
    ]
@@ -713,7 +712,7 @@
    ],
    "source": [
     "query_result = embeddings.embed_query(\"Hello world\")\n",
-    "print(\"Length\", len(query_result))"
+    "print(\"Length of the query\", len(query_result))"
    ]
   },
   {
